New layouts: curriculum and projects

--- a/_data/buttons.yml
+++ b/_data/buttons.yml
@@ -1,2 +1,4 @@
-- curriculum: Curriculum
-  projects: Projects
+- name: Curriculum
+  url: "/curriculum.html"
+- name: Projects
+  url: "/projects.html"
