--- a/_data/career-summary.yml
+++ b/_data/career-summary.yml
@@ -1,9 +1,2 @@
-summary: "Summarise your career here. Lorem ipsum dolor sit amet, consectetuer adipiscing
-elit. You can download this free resume/CV template here. Aenean commodo ligula
-eget dolor aenean massa. Cum sociis natoque penatibus et magnis dis parturient
-montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque
-eu. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo
-ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis
-parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec,
-pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede
-justo, fringilla vel, aliquet nec, vulputate eget."
+summary: "I am an active, creative person who likes to learn and discover new things. I organize my time to make the most of it, I have many hobbies and I try new ones often
+I enjoy doing my work, I like to be aware on the latest advances of the sector and I want to direct my career towards the frontend design, for being a more creative part.I am cheerful and positive, with ease to integrate people and wanting to learn everything."
