--- a/_data/curriculum/personal.yml
+++ b/_data/curriculum/personal.yml
@@ -1,4 +1,5 @@
 location: A Coruña, Galicia, España
+location_url: https://goo.gl/maps/5fDpgDEsv7u
 email: adrian.pereira.guerra@gmail.com
 social:
   - link: https://github.com/adrisons
