Curriculum anchor styles

--- a/_data/curriculum/education.yml
+++ b/_data/curriculum/education.yml
@@ -9,7 +9,7 @@
   time: December 2018
 
 - title: JS Camp
-  where: Barcelona
+  where: JS Camp Barcelona
   where_url: https://jscamp.tech/
   time: July 2018
 
