--- a/_data/curriculum/experience.yml
+++ b/_data/curriculum/experience.yml
@@ -7,8 +7,8 @@
     title: Achievements
     description: I am very proud of how I have grown personally and professionally in this company, of the good relationship with my team and of all the things I have learned here
     list:
-      - one
       - Ability to work autonomously
+      - Agile development
   technologies:
     title: Technologies used
     list:
@@ -19,7 +19,7 @@
       - CSS 
       - SASS
       - Node.js
-
+      - Git
       - Java
       - Spring
       - Hibernate
