--- a/_data/curriculum/education.yml
+++ b/_data/curriculum/education.yml
@@ -16,9 +16,9 @@
 - title: Angular 2 with TypeScript and Observables
   where: Academia Binaria
   where_url: https://academia-binaria.com/
-  time: 2016
+  time: July 2016
 
-- title: Software engineering
+- title: Computer Science
   where: University of A Coruña
   where_url: https://www.udc.es/
   time: 2009 - 2015
