--- a/_data/curriculum/experience.yml
+++ b/_data/curriculum/experience.yml
@@ -15,6 +15,7 @@
       - Acquired responsibility
       - Use Git with an agile workflow
       - Improvement of my communication skills to integrate with other teams
+      - Start doing code review
 
   technologies:
     title: Technologies used
