--- a/_data/curriculum/career-summary.yml
+++ b/_data/curriculum/career-summary.yml
@@ -1,2 +1,5 @@
-summary: "I am an active, creative person who likes to learn and discover new things. I organize my time to make the most of it, I have many hobbies and I try new ones often
-I enjoy doing my work, I like to be aware on the latest advances of the sector and I want to direct my career towards the frontend design, for being a more creative part.I am cheerful and positive, with ease to integrate people and wanting to learn everything."
+summary: "I am an active, creative person who likes to learn and discover new things.
+ I organize my time to make the most of it, I have many hobbies and I try new ones often
+I enjoy doing my work, I like to be aware on the latest advances of the sector and I want 
+to direct my career towards the frontend design, for being a more creative part.
+ I am cheerful and positive, with ease to integrate people and wanting to learn everything."
