Add tic-tac-toe project

--- a/_data/projects/projects.yml
+++ b/_data/projects/projects.yml
@@ -2,3 +2,5 @@ title: Projects
 list:
     - name: 'Snake'
       url: 'https://adrisons.github.io/snake/'
+    - name: 'Tic-tac-toe'
+      url: 'https://adrisons.github.io/tic-tac-toe/'
