--- a/_data/curriculum/education.yml
+++ b/_data/curriculum/education.yml
@@ -1,7 +1,9 @@
-# - name: JSCamp 2018
-# - name: Angular 7 (Advanced)
 
 
+- title: Atlantica Conf 2019
+  where: Atlantica Conf A Coruña
+  where_url: https://atlanticaconf.com
+  time: October 2019
 
 - title: Angular 7 - Advanced development of business applications
   where: Academia Binaria
