--- a/_data/curriculum/experience.yml
+++ b/_data/curriculum/experience.yml
@@ -23,10 +23,10 @@
       - Angular
       - Javascript 
       - Typescript
+      - Rxjs
       - HTML
       - CSS 
       - SASS
-      - Node.js
       - Git
       - Java
       - Spring
