career summary & readme

--- a/_data/curriculum/career-summary.yml
+++ b/_data/curriculum/career-summary.yml
@@ -1,5 +1,12 @@
 summary: "I am an active, creative person who likes to learn and discover new things.
- I organize my time to make the most of it, I have many hobbies and I try new ones often
-I enjoy doing my work, I like to be aware on the latest advances of the sector and I want 
-to direct my career towards the frontend design, for being a more creative part.
- I am cheerful and positive, with ease to integrate people and wanting to learn everything."
+I organize my time to make the most of it, from a meetup about React (for example) to a breakfast with friends. 
+Breaking the routine is something I need, an afternoon of surfing or laser combat with my team is like a breath of fresh air.
+<br></br>
+
+I enjoy doing my work, focusing on the details and thinking about performance and usability with a global perspective. 
+I am directing my career towards the frontend development, I feel it as a more creative part of computing and for me time passes much faster :)
+<br></br>
+I would like to work in an agile environment with professional and committed people, where I have challenges to overcome and where I can continue learning top technologies and building my career.
+"
+
+
