Remove projects button from home

--- a/_data/buttons.yml
+++ b/_data/buttons.yml
@@ -1,4 +1,4 @@
 - name: Curriculum
   url: "/curriculum.html"
-- name: Projects
-  url: "/projects.html"
+##- name: Projects
+##  url: "/projects.html"
